added function that update GUI controllers

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="AB_favicon.gif" type="image/ico">
     <title>Laser Metal Cutting Machine</title>
-    </head>
-<body>
+</head>
 
+<body>
+    <div id="container"></div>
+    <h1>Text here fdsfsdfsdfs sdf sd fs fs df sdf sdf sdf sd</h1>
+    dasdasd <br>
+    ads <br>
+
+     <p>asdasd</p>
+
+    asdasdasd
+
+    asdasd
 </body>
+
 </html>
