--- a/src/index.html
+++ b/src/index.html
@@ -7,19 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="AB_favicon.gif" type="image/ico">
     <title>Laser Metal Cutting Machine</title>
+
 </head>
 
 <body>
-    <div id="container"></div>
-    <h1>Text here fdsfsdfsdfs sdf sd fs fs df sdf sdf sdf sd</h1>
-    dasdasd <br>
-    ads <br>
+        <canvas id="canvasjs"></canvas>
 
-     <p>asdasd</p>
-
-    asdasdasd
-
-    asdasd
 </body>
 
 </html>
